# jw_media_downloader

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
src/: Downloader.py  Parser.py  start.py
